--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>teste de github</title>
-    </head>
-    <body>
-        <h1>teste</h1>
-    </body>
+<html lang="pt-br">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/style-padrao.css">
+		<title>Cat love</title lang="en">
+	</head>
+	<body>
+		<main id="main-container">
+			<img src="./image/cat-notebook.png" id="cat1">
+			<img src="./image/cat-smatphone.png" id="cat2">
+			<img src="./image/cat-style.png" id="cat3">
+			<div class="info">
+				<div class="info_title">
+					<h1>Cat love</h1>
+					<p>All for your kitty.</p>
+					<p>Receive monthly news that your will love, from ration to toys with a single subscription.</p>
+					<div class="info_submit">
+						<input type="text" placeholder="Your Email">
+						<button type="submit">Apply</button>
+					</div>
+					<p id="legenda">Subscribe to newslist</p>
+					<a id="credit" href="https://br.freepik.com/autor/catalyststuff">images created for catalyststuff</a>
+				</div>
+				<div class="info_panel">					
+					<div class="card">
+												
+						<div class="card_title">
+							<h2>Login in</h2>
+							<input type="text" placeholder="Pet name">
+							<input type="password" placeholder="password">
+							<br>
+							<button type="submit">Login</button>
+							<a href="sing_up.html">Sing Up</a>												
+						</div>
+						<img class="card_cat" src="./image/cat-preguica.png" alt="">
+					</div>
+				</div>
+			</div>
+		</main>
+	</body>
 </html>
