creation: registration screen and respective css

--- a/sing_up.html
+++ b/sing_up.html
@@ -4,16 +4,27 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/style-padrao.css">
-		<title>Cat love</title lang="en">
+		<link rel="stylesheet" href="sing_up.css">
+		<title>Cat love | Sing Up</title lang="en">
 	</head>
 	<body>
 		<main id="main-container">
 			<img src="./image/cat-notebook.png" id="cat1">
 			<img src="./image/cat-smatphone.png" id="cat2">
 			<img src="./image/cat-style.png" id="cat3">
+			
 			<div class="form_container">
+				<h1>Sing Up</h1>
                 <form>
-					
+					<input type="text" name="name" id="" placeholder="Your name">
+					<input type="email" name="email" id="" placeholder="exemple@domain.com">
+					<input type="text" name="petName" id="" placeholder="Your pet's name">
+					<div>
+						<label for="birthday"> birthday of your pet's</label>
+						<input id="birthday" type="date" name="birthday">
+						<button type="submit">Continue</button>
+						<a href="index.html">Login in</a>
+					</div>
 				</form>
             </div>
 		</main>
