--- a/sing_up.html
+++ b/sing_up.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/style-padrao.css">
-		<link rel="stylesheet" href="sing_up.css">
+		<link rel="stylesheet" type="text/css" href="./css/style-padrao.css">
+		<link rel="stylesheet" href="./css/sing_up.css">
 		<title>Cat love | Sing Up</title lang="en">
 	</head>
 	<body>
