adding image and page icon

--- a/sing_up.html
+++ b/sing_up.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="./css/style-padrao.css">
 		<link rel="stylesheet" href="./css/sing_up.css">
+		<link rel="icon" href="./image/cat-cool_icon.svg">
 		<title>Cat love | Sing Up</title lang="en">
 	</head>
 	<body>
@@ -26,6 +27,7 @@
 						<a href="index.html">Login in</a>
 					</div>
 				</form>
+				<img src="./image/cat-cool_icon.svg" alt="">
             </div>
 		</main>
 	</body>
