--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="./css/style-padrao.css">
+		<link rel="icon" href="./image/cat-cool_icon.svg">
 		<title>Cat love</title lang="en">
 	</head>
 	<body>
