adding image credits

--- a/sing_up.html
+++ b/sing_up.html
@@ -13,7 +13,7 @@
 			<img src="./image/cat-notebook.png" id="cat1">
 			<img src="./image/cat-smatphone.png" id="cat2">
 			<img src="./image/cat-style.png" id="cat3">
-			
+			<a id="credit" href="https://br.freepik.com/autor/catalyststuff">images created for catalyststuff</a>
 			<div class="form_container">
 				<h1>Sing Up</h1>
                 <form>
